# Master_Python_Eip

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
buenas_practicas/: README.md  app.py  bpp1.py  bpp2.py  bpp4.py  requirements.txt  test.py
creacion_de_aplicaciones/: README.md
desarrollo_y_gestion_proyectos/: README.md  docker-compose.yml  main.py  requirements.txt
fundamentos_bigdata/: README.md  fbd2.ipynb  fbd3.ipynb  fbd4.ipynb  fbd5.ipynb
fundamentos_ml/: README.md  fiaml1.ipynb  fiaml2.ipynb  fiaml3.ipynb  fiaml4.ipynb  fiaml5.ipynb  l3p1_train.csv  l3p2_test.csv  l3p3_test.csv  l4p1_test.csv
fundamentos_python/: README.md  primo.r  vlm_rprimo.py
hacking_python/: 7-keyloggerLinux.py  7-keyloggerWindows.py  hpp1.py  hpp2.py  hpp3.py  hpp4.py  hpp5.py  hpp6.py  hpp7.1.py  hpp7.2.py  hpp7.py
hacking_y_pentesting_python/: 92.eipmap.sh  93.1.2.clase.rb  93.1.3.hello_world.rb  93.1.4.tipo_datos.rb  93.1.6.minutos.rb  93.2.1.net_http.rb  93.2.3.open_uri.rb  93.2.4.open_url.rb  93.2.5.ip_rango.rb  94.2.top_10_servicios_Por_status.ps1
pcap/: mimodulo1.py  mimodulo2.py  pcap2.ipynb  pcap3.ipynb  pcap4.ipynb  pcap5.ipynb  pcap6.ipynb  pcapFinal.ipynb
programacion_avanzada/: 02.bucles.py  05.colecciones.py  07.base_de_datos.py  09.paralelismo_y_concurrencia.py  README.md
programacion_avanzada_python/: .gitignore  02.bucles.py  09.paralelismo_y_concurrencia.py  README.md  calculadora.py  concatenar_cadenas.py  excepciones_recursividad.py  requirements.txt
programacion_bigdata/: README.md  iris.csv  pbd10.ipynb  pbd6_1.ipynb  pbd8.ipynb  (+2 more)
(+162 files in other folders)
